name:                imager3000
version:             0.1.0.0
synopsis:            Concurrent image scrapper.
description:         Please see README.md
homepage:            http://github.com/BsAsHaskell/imager3000
license:             BSD3
license-file:        LICENSE
author:              BAHM
maintainer:          example@example.com
copyright:           2010 BAHM
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Imager3000.Parse
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , unordered-containers
                     , taggy
  default-language:    Haskell2010

executable imager3000
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Imager3000.Fetch
                     , Imager3000.Parse
                     , Imager3000.Download
                     , Imager3000.Concurrent.MVar
                     , Imager3000.Concurrent.Async
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , bytestring
                     , unordered-containers
                     , async-pool
                     , network-uri
                     , http-client
                     , taggy
  default-language:    Haskell2010

test-suite imager3000-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , imager3000
                     , blaze-html
                     , QuickCheck >= 2
                     , test-framework
                     , test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
